<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/EditText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/tracker_address"
        android:text="10.0.2.2:6789" />

    <EditText
        android:id="@+id/EditText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText1"
        android:layout_below="@+id/EditText1"
        android:ems="10"
        android:hint="@string/netid"
        android:text="mg828" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/EditText2"
        android:layout_below="@+id/EditText2"
        android:layout_marginTop="60dp"
        android:text="@string/time_update" />

    <EditText
        android:id="@+id/EditText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/TextView"
        android:layout_below="@+id/TextView"
        android:ems="10"
        android:inputType="number"
        android:text="10" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText3"
        android:layout_centerHorizontal="true"
        android:text="@string/submit" />

</RelativeLayout>